Fix layout issues on braces care page.

--- a/sass/braces-care.scss
+++ b/sass/braces-care.scss
@@ -11,6 +11,7 @@
     background-image: image-url('large-hexagon.png');
     background-position: center top;
     background-repeat: no-repeat;
+    background-size: 100% auto;
     padding-top: 5em;
     text-align: center;
 
@@ -32,7 +33,7 @@
 
         .theme-line
         {
-            height: 4px;
+            height: 2px;
         }
 
         .title
@@ -73,4 +74,9 @@
     {
         width: 33%;
     }
+}
+
+.smile-bucks
+{
+    padding-top: 7em;
 }
